@@ -1264,6 +1264,9 @@ void World::LoadConfigSettings(bool reload)
     // crypt run token reward
     m_int_configs[CONFIG_CRYPT_RUN_REWARDS] = ConfigMgr::GetIntDefault("CryptRun.Reward", 10);
 
+    // Looking For Group Join All Maps
+    m_bool_configs[CONFIG_LFG_LOOKING_FOR_GROUP] = ConfigMgr::GetBoolDefault("Looking.For.Group.Join.All", true); 
+
     // call ScriptMgr if we're reloading the configuration
     if (reload)
         sScriptMgr->OnConfigLoad(reload);
