@@ -2619,6 +2619,13 @@ CryptRun.Reward = 10
 UI.ShowQuestLevelsInDialogs = 0
 
 #
+# Includes satellite to search for work else where LFG
+# Default: 0 - Disable
+#          1 - Enable
+
+LFG.Location.All = 1
+
+#
 ###################################################################################################
 
 ###################################################################################################
